--- a/index.html
+++ b/index.html
@@ -200,48 +200,54 @@
     </div>
   </div>
 
-  <!-- JavaScript placed correctly inside script tags -->
+  
   <script>
     const dashboardListItem = document.querySelector('.sidebar-menu li.has-submenu');
-    const dashboardSubmenu = document.getElementById('dashboard-submenu');
-    const sidebarLinks = document.querySelectorAll('.sidebar-menu a');
-    const loadedContent = document.getElementById('loaded-content');
+const dashboardSubmenu = document.getElementById('dashboard-submenu');
+const sidebarLinks = document.querySelectorAll('.sidebar-menu a');
+const loadedContent = document.getElementById('loaded-content');
 
-    dashboardListItem.addEventListener('click', function () {
-      if (dashboardSubmenu.style.display === 'none' || dashboardSubmenu.style.display === '') {
-        dashboardSubmenu.style.display = 'block';
-      } else {
-        dashboardSubmenu.style.display = 'none';
+// Toggle the Dashboard submenu
+dashboardListItem.addEventListener('click', function () {
+  if (dashboardSubmenu.style.display === 'none' || dashboardSubmenu.style.display === '') {
+    dashboardSubmenu.style.display = 'block';
+  } else {
+    dashboardSubmenu.style.display = 'none';
+  }
+});
+
+
+const dashboardLink = dashboardListItem.querySelector('a');
+dashboardLink.addEventListener('click', function (event) {
+  event.preventDefault();
+});
+
+// Handle all sidebar link clicks
+sidebarLinks.forEach(link => {
+  link.addEventListener('click', function (event) {
+    event.preventDefault();
+    const href = this.getAttribute('href');
+    
+    
+    if (href.includes('module=')) {
+      const module = href.split('=')[1];
+      console.log(module);
+
+      if (module) {
+        fetch(`modules/${module}.html`)
+          .then(response => {
+            if (!response.ok) {
+              throw new Error('Failed to load module content.');
+            }
+            return response.text();
+          })
+          .then(data => {
+            loadedContent.innerHTML = data;
+          })
+          .catch(error => {
+            loadedContent.innerHTML = `<p style="color: red;">Error: ${error.message}</p>`;
+          });
       }
-    });
-
-    const dashboardLink = dashboardListItem.querySelector('a');
-    dashboardLink.addEventListener('click', function (event) {
-      event.preventDefault();
-    });
-
-    sidebarLinks.forEach(link => {
-      link.addEventListener('click', function (event) {
-        event.preventDefault();
-        const module = this.getAttribute('href').split('=')[1];
-        console.log(module);
-        if (module) {
-          fetch(`modules/${module}.php`)
-            .then(response => {
-              if (!response.ok) {
-                throw new Error('Failed to load module content.');
-              }
-              return response.text();
-            })
-            .then(data => {
-              loadedContent.innerHTML = data;
-            })
-            .catch(error => {
-              loadedContent.innerHTML = `<p>Error: ${error.message}</p>`;
-            });
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+    }
+  });
+});
