--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
                 localStorage.setItem('registeredEmail', email);
                 localStorage.setItem('registeredPassword', password);
 
-                window.location.href = 'login1.html?registered=true'; // Redirect to login page with a flag
+                window.location.href = 'login1.html?registered=true'; 
                 return true;
             }
 
