--- a/index.html
+++ b/index.html
@@ -77,12 +77,16 @@
       font-size: 0.8em;
     }
 
-    .submenu {
-      list-style: none;
-      padding: 0;
-      margin-left: 20px;
-      display: none;
-      background-color: #2c3e50;
+   .submenu {
+  list-style: none;
+  padding: 0;
+  margin-left: 20px;
+  background-color: #2c3e50;
+  
+  /
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s eas
     }
 
     .submenu li {
