--- a/index.html
+++ b/index.html
@@ -149,39 +149,39 @@
       <li class="has-submenu">
         <a href="#">Learning Management</a>
         <ul class="submenu">
-          <li><a href="?module=identify_learning_needs">Identify Learning Needs</a></li>
-          <li><a href="?module=evaluate_learning_outcomes">Evaluate Learning Outcomes</a></li>
-          <li><a href="?module=develop_learning_content">Develop Learning Content</a></li>
+          <li><a href="identify_needs.html">Identify Learning Needs</a></li>
+          <li><a href="evaluate_outcomes.html">Evaluate Learning Outcomes</a></li>
+          <li><a href="develop_content.html">Develop Learning Content</a></li>
         </ul>
       </li>
 
       <li class="has-submenu">
         <a href="#">Employee Self-Service</a>
         <ul class="submenu">
-          <li><a href="?module=deployment_go_live">Deployment Go-Live</a></li>
-          <li><a href="?module=content_feature_development">Content and Feature Development</a></li>
+          <li><a href="deployment.html">Deployment Go-Live</a></li>
+          <li><a href="feature_development.html">Content and Feature Development</a></li>
         </ul>
       </li>
 
       <li class="has-submenu">
         <a href="#">Competency Management</a>
         <ul class="submenu">
-          <li><a href="?module=competency_tracking_reporting">Competency Tracking and Reporting</a></li>
-          <li><a href="?module=performance_evaluation">Performance Evaluation</a></li>
+          <li><a href="competency_tracking.html">Competency Tracking and Reporting</a></li>
+          <li><a href="performance_evaluation.html">Performance Evaluation</a></li>
         </ul>
       </li>
 
       <li class="has-submenu">
         <a href="#">Succession Planning</a>
         <ul class="submenu">
-          <li><a href="?module=project_management">Project Management</a></li>
-          <li><a href="?module=implementation">Implementation</a></li>
-          <li><a href="?module=talent_implementation">Talent Implementation</a></li>
+          <li><a href="project_management.html">Project Management</a></li>
+          <li><a href="implementation.html">Implementation</a></li>
+          <li><a href="talent_implementation.html">Talent Implementation</a></li>
         </ul>
       </li>
 
-      <li><a href="?module=adminsettings">Admin Settings</a></li>
-      <li><a href="?module=systemsettings">System Settings</a></li>
+      <li><a href="adminsettings.html">Admin Settings</a></li>
+      <li><a href="stemsettings.html">System Settings</a></li>
 
     </ul>
   </div>
