--- a/adminsettings.html
+++ b/adminsettings.html
@@ -1,1 +1,119 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Admin Settings</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f6fc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+    }
 
+    .settings-container {
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #2c3e50;
+      margin-bottom: 20px;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      display: block;
+      color: #34495e;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    .form-group input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #bdc3c7;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+
+    .save-button {
+      width: 100%;
+      padding: 12px;
+      background-color: #3498db;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      margin-top: 10px;
+    }
+
+    .save-button:hover {
+      background-color: #2980b9;
+    }
+  </style>
+</head>
+<body>
+
+<div class="settings-container">
+  <h2>Admin Settings</h2>
+  <form id="adminSettingsForm">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" placeholder="Enter new username" required>
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Enter new email" required>
+    </div>
+
+    <div class="form-group">
+      <label for="birthday">Birthday</label>
+      <input type="date" id="birthday" name="birthday" required>
+    </div>
+
+    <div class="form-group">
+      <label for="contact">Contact Number</label>
+      <input type="tel" id="contact" name="contact" placeholder="Enter contact number" required>
+    </div>
+
+    <button type="submit" class="save-button">Save Changes</button>
+  </form>
+</div>
+
+<script>
+document.getElementById('adminSettingsForm').addEventListener('submit', function(event) {
+  event.preventDefault();
+  
+  
+  const username = document.getElementById('username').value;
+  const email = document.getElementById('email').value;
+  const birthday = document.getElementById('birthday').value;
+  const contact = document.getElementById('contact').value;
+
+  // Simulate saving (you would normally send to the server)
+  alert(`Saved Successfully!\n\nUsername: ${username}\nEmail: ${email}\nBirthday: ${birthday}\nContact: ${contact}`);
+  
+
+  // document.getElementById('adminSettingsForm').reset();
+});
+</script>
+
+</body>
+</html>
