--- a/index.html
+++ b/index.html
@@ -191,7 +191,12 @@
     </a>
   </li>
 </ul>
-
+      
+<script>
+function confirmLogout() {
+  return confirm("Are you sure you want to log out?");
+}
+</script>
     </ul>
   </div>
 
